--- a/web/views/retries.erb
+++ b/web/views/retries.erb
@@ -49,7 +49,7 @@
               <div class="args"><%= display_args(entry.display_args) %></div>
             </td>
             <td>
-              <div><%= h truncate("#{entry['error_class']}: #{entry['error_message']}", 200) %></div>
+              <div><%= h "#{entry['error_class']}: #{entry['error_message']}" %></div>
             </td>
           </tr>
         <% end %>
